<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="147dp"
            android:layout_height="171dp">

            <TextView
                android:id="@+id/dice"
                android:layout_width="467dp"
                android:layout_height="500dp"
                android:layout_span="99"
                android:height="571dp"
                android:scrollbars="vertical" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_d4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d4" />

            <Button
                android:id="@+id/button_d6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d6" />

            <Button
                android:id="@+id/button_d8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d8" />

            <Button
                android:id="@+id/button_d10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d10" />

            <Space
                android:layout_width="235dp"
                android:layout_height="match_parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_d12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d12" />

            <Button
                android:id="@+id/button_d20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d20" />

            <Button
                android:id="@+id/button_d100"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d100" />

            <Space
                android:layout_width="58dp"
                android:layout_height="match_parent" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>